--- a/BAFitness.css
+++ b/BAFitness.css
@@ -1,36 +1,52 @@
+body {
+    font-family:'Bebas Neue', sans-serif ;
+}
+
 h1, h2 {
-    font-family: 'Roboto Slab', serif;
-    color: white;
+    font-family: 'Bebas Neue', sans-serif;
+    color:rgb(204, 15, 119)
+}
+h1 {
+    font-size: 4.8rem;
+}
+h2 {
+    font-size: 3.8rem;
+    
 }
 
 h1 {
-padding-top: 50px;    
+    padding-top: 50px;    
     text-align: center;
     font:bold;
 }
 footer {
     background-color: none;
     font: bold;
-    align-items: center;
-    position: absolute;
+    align-items: center ;
+    position: fixed;
+    left: 0px;
     bottom: 0px;
     width: 100%;
-    color: white;
+    color: rgb(226, 196, 213);
+    font-family: 'Bebas Neue', sans-serif ;
 }
 
 .hero {
-    background: url(../img/inicio.jpg) no-repeat;
+    background: url(img/inicio.jpg) no-repeat;
     background-size: cover;
     height: 100%; /*altura imagen*/
     min-height: 600px;
-    color: rgb(8, 8, 8); /*transparencia en imagen*/
-    
+    color: rgb(9, 9, 9); /*transparencia en imagen*/
+    margin: 0;
+
 }
 
 .lista-novedades {
     margin: 0;
     padding: 0;
     list-style: none;
+    background: url(img/novedades.jpg) no-repeat;
+
 }
 
 .lista-novedades li {
@@ -39,13 +55,15 @@ footer {
 
 .lista-novedades li a {
    background-color: #0a0a0a;
-   font-family: 'Roboto Slab', serif;
+   font-family: 'Bebas Neue', sans-serif;
    font: bold;
    text-decoration: none;
-   font-size: 0.9rem;
+   font-size: 1.2rem;
    color: #fdfdfc;
    transition: all .2s ease-in-out;
    display: flex;
+   text-align: center;
+   
 }
 
 .lista-novedades li a:hover {
@@ -54,8 +72,8 @@ footer {
 }
 
 .lista-novedades li a img {
-    width: 60px;
-    height: 32px;
+    width: 120px;
+    height: 50px;
     filter: grayscale();
     transition: all .2s ease-in-out;
     margin-right: 1rem;
@@ -64,46 +82,92 @@ footer {
 
 .lista-novedades li a:hover img {
     filter: none;
-    margin-right: 1.2rem;
+    margin-right: 1.4rem;
     opacity: 1;
 }
-        
-.testimonios {
-    background-color: #dadada;
-    padding-bottom: 4rem !important;
+
+.row aligne-items-center {
+    padding: auto;
 }
-
-.testimonio {
-        text-align: center;
-        padding: 50px 20px;
-    }
-
     .contenido-hero {
         position: absolute; 
-        background-color: rgba(0,0,0,.5); /*transparencia en imagen*/
+        background-color: rgba(90, 73, 73, 0.7); /*transparencia en imagen*/
         width: 100%;
         height: 600px;
         display:flex;
         flex-direction:column;
         text-align:center;
-        color: white; 
+        color: black; 
         font: bold;
         justify-content:center;
-        line-height: 25px; 
+        line-height: 50px; 
         margin-left: auto;
         margin-right: auto;
           
      }
 
      .col {
+        font-family: 'Bebas Neue', sans-serif;
         text-align: justify;
         color: white; 
-        padding-top: 50px;
+        font:bold;
+        padding-top: 5px;
+        justify-content: center;
+        height: 50vh;
+        line-height: 30px;
         
+    }
 
-     }
+    .carousel-item {
+        color: rgba(8, 8, 8);
+        background: url(img/musculacion3.jpg) no-repeat;
+        background: url(img/carousel4.jpg) no-repeat;
+        background: url(img/carousel5.jpg) no-repeat;
+        background: url(img/carousel7.jpg) no-repeat;
+        background: url(img/carousel6.jpg) no-repeat;
+        background: url(img/equipamiento.jpg) no-repeat;
+        background: url(img/nutricionista.jpg);
+        background: url(img/suplementos.jpg);
+        background: url(img/boxing.jpg) no-repeat;
+        width:  100%;
+        height: 600px;
+        opacity: 1.5;
+             
+    }
+    
+    .carousel-inner-item img {
+        object-fit: scale-down;
+        height: 50vh;
+        width: 100%;
+    }
 
-     
+    .dropdown-menu {
+        background-color:rgb(231, 131, 186);
+        color: white;
+        font:bold;
+        
+    }
+ 
+    @media (min-width: 600px) {
+        .carousel-inner{
+           width: auto;
+           height: auto;
+        }
+   }
+
+   .mapa iframe {
+    width: 100%;
+    aspect-ratio: 1.2;
+    position: relative;
+   }
+
+.d-block {
+    width: 100%;
+    height: 600px;
+    display: block;
+}
+
+
      
 
     
