modificacion de vistas y layout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,18 +7,18 @@
   <body>
     <nav>
       <ul>
-            <li><a href="">home</a></li>
-            <li><a href="">nosotros</a></li>
-            <li><a href="">servicios</a></li>
-            <li><a href="">novedades</a></li>
-            <li><a href="">nuevas clases</a></li>
-            <li><a href="">descuentos</a></li>
-            <li><a href="">productos</a></li>
-            <li><a href="">sedes</a></li>
-            <li><a href="">lomitas</a></li>
-            <li><a href="">cañitas</a></li>
-            <li><a href="">cardales</a></li>
-            <li><a href="">contacto</a></li>
+            <li><a href="/Index.html">home</a></li>
+            <li><a href="/nosotros.html">nosotros</a></li>
+            <li><a href="/servicios.html">servicios</a></li>
+            <li><a href="/novedades.html">novedades</a></li>
+            <li><a href="/nuevas_clases.html">nuevas clases</a></li>
+            <li><a href="/descuentos.html">descuentos</a></li>
+            <li><a href="/productos.html">productos</a></li>
+            <li><a href="/sedes.html">sedes</a></li>
+            <li><a href="/lomitas.html">lomitas</a></li>
+            <li><a href="/cañitas.html">cañitas</a></li>
+            <li><a href="/cardales.html">cardales</a></li>
+            <li><a href="/contacto.html">contacto</a></li>
        </ul>
     </nav>
     {{{body}}}
